[package]
name = "memdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs2 = "0.4.3"
libc = { version = "0.2.149", features = [] }
page_size = "0.6.0"

[dev-dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
