[package]
name = "memdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
backtrace = "0.3.69"
color-backtrace = "0.6.0"
crc32fast = "1.3.2"
libc = { version = "0.2.149", features = [] }
libpq = "3.1.0"
log = "0.4.20"
memmap2 = "0.9.0"
page_size = "0.6.0"
parking_lot = { version = "0.12.1", features = ["serde"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os="windows"))'.dependencies]
fs2 = "0.4.3"

[dev-dependencies]
byteorder = "1.5.0"
bytes = { version = "1.5.0", features = ["serde"] }
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
zerocopy = "0.7.8"

